# PBR_Study

./: .gitignore  CLAUDE.md  LEARNING_STRATEGY.md  PHASE1_NOTES.md  PROGRESS.md  README.md  download_pbr.py  generate_diagrams.py
pbr-raytracer/: .gitignore  CMakeLists.txt
pbr-raytracer/src/: main.cpp  ray.h  vec3.h
